2016-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* configure.ac: version 1.4.4

2016-09-28  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* howm-date.el: extend the option howm-insert-date-future.
	thx > Albert-san (areiner at tph.tuwien.ac.at)
	https://osdn.jp/projects/howm/lists/archive/eng/2016/000118.html
	(howm-action-lock-date-future): new option
	(howm-action-lock-date): support howm-action-lock-date-future
	(howm-datestr-expand): new value 'closer for FUTURE-P

	* howm-common.el (howm-time-difference-second):
	support (HIGH LOW) without milliseconds for howm-datestr-expand

2016-04-05  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* howm.el: modify header comments for MELPA
	ref. `Info(elisp) D.8 Conventional Headers for Emacs Libraries`
	thx > Yuki Inoue san (inouetakahiroki at gmail.com)

2016-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* configure.ac: test version

2016-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* howm.el: change the order of "require"s for correct dependencies

	* action-lock.el: require howm-common for avoiding warning

	* riffle.el: ditto.

	* illusion.el: ditto.

	* howm-lang-en.el: ditto.

	* howm-lang-ja.el: ditto.

	* howm-common.el (howm-insert-file-contents):
	moved from howm-backend.el for yarot13-insert-file-contents

	* howm-vars.el (howm-menu-action-arg): moved from howm-menu.el
	for avoiding reference to free variable in howm-lang-*.el

	* howm-backend.el (howm-exclude-p): moved from howm-common.el

	* howm-mode.el (howm-history): moved from howm-common.el

	* howm-common.el (howm-fontify): useless now

2016-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* cheat-font-lock.el (cheat-font-lock-compiled-body):
	avoid warning in byte-compilation
	"... is not known to be defined."

	* howm-date.el (howm-action-lock-date-search): ditto.
	"function ... used to take 0+ arguments, now takes 1"

	* howm-misc.el (howm-ime-fix): ditto.
	delete obsolete fix for avoiding