@@ -1,6 +1,6 @@
 ;;; action-lock.el --- invoke magic action by RET key on spell strings
 
-;; Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2015, 2016
+;; Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2015, 2016, 2017
 ;;   HIRAOKA Kazuyuki <khi@users.sourceforge.jp>
 ;; $Id: action-lock.el,v 1.72 2011-12-31 15:07:28 hira Exp $
 ;;
