@@ -1,6 +1,6 @@
 ;;; honest-report.el --- make bug report with screenshot and keylog
 
-;; Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2015, 2016
+;; Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2015, 2016, 2017
 ;;   HIRAOKA Kazuyuki <khi@users.sourceforge.jp>
 ;; $Id: honest-report.el,v 1.13 2011-12-31 15:07:29 hira Exp $
 ;;
