@@ -1,6 +1,6 @@
 ;;; howm.el --- Wiki-like note-taking tool
 
-;; Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2015, 2016 HIRAOKA Kazuyuki
+;; Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2015, 2016, 2017 HIRAOKA Kazuyuki
 
 ;; Author: HIRAOKA Kazuyuki <khi@users.sourceforge.jp>
 ;; URL: http://howm.osdn.jp
