@@ -1,3 +1,7 @@
+2017-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>
+
+	* howm.el: update copyright years
+
 2016-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>
 
 	* configure.ac: version 1.4.4
